2006-08-06  Benoît Dejean  <benoit@placenet.org>

	* src/backend.c: (is_no_dummy_device): Reworked.

2006-07-22  Benoît Dejean  <benoit@placenet.org>

	* src/backend.h:
	* src/backend.c: (get_additional_info), (get_device_info):
	* src/netspeed.c: (search_for_up_if), (update_applet),
	(device_change_cb), (netspeed_applet_factory): Avoided returning
	DevInfo as value, use pointer instead. This saves some copies,
	which saves a bit of CPU time on x86.
	Also fixed a leak in search_for_up_if.

	* src/backend.c: (format_ipv4), (format_ipv6): Saved 2 g_strdup.

2006-07-18  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in:	0.13 -> 0.13.99
	* netspeed.c: (bytes_to_string): use gettext(), so that N_-strings get
	translated properly

2006-07-11  Jörgen Scheibengruber <mfcn@gmx.de>

	* netspeed.c: (bytes_to_string): apply patch from Benoit; use 1000 bit = 1Mbit
	1024 bytes = 1 MiByte; switch to SI-Units
	* netspeed.c: (update_applet), (settings_cb): show transferred bits in
	the details dialog instead of bytes, if this setting is active 
	* netspeed.c: (about_cb): fix translator-credits

2006-06-17  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* docs/es/netspeed_applet.xml: correct a couple of details on
	the Spanish documentation.

2006-05-31  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in: Added pl to ALL_LINGUAS

2006-04-25  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.c: (get_device_info): use only 6 octets for hw-address,
	if the last two are 0

2006-04-25  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.(c|h): add is_no_dummy_device() and make use of it
	* netspeed.c: make use of is_no_dummy_device() instead of checking devices
	manually

2006-02-07  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2005-10-08  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (update_applet): correct the text in the tooltip.

2005-07-26  Jörgen Scheibengruber <mfcn@gmx.de>
