@@ -1,5 +1,10 @@
 2006-08-06  Benoît Dejean  <benoit@placenet.org>
 
+	* src/backend.c: (get_available_devices): Improved.
+	Added TODO.
+
+2006-08-06  Benoît Dejean  <benoit@placenet.org>
+
 	* src/backend.c: (is_no_dummy_device): Reworked.
 
 2006-07-22  Benoît Dejean  <benoit@placenet.org>
